Fix too large expanding items error across whole page
Note it is not called 'overflow error" as in commit 3af26fb.

--- a/styles/style.css
+++ b/styles/style.css
@@ -209,8 +209,8 @@ input[type="search"]:focus {
 }
 
 .profile-options .pic {
-    height: 80px;
-    width: 80px;
+    height: 30px;
+    width: 30px;
     background-color: pink;
 }
 
